--- a/src/Infrastructure/Whistler.Infrastructure.csproj
+++ b/src/Infrastructure/Whistler.Infrastructure.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Whistler.Application.csproj" />
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+    <InternalsVisibleTo Include="LINQPadQuery" />
+    <InternalsVisibleTo Include="Whistler.Infrastructure.UnitTests" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Whistler.Application.csproj" />
   </ItemGroup>
 
 </Project>
